--- a/MobileTabletCounter/MobileTabletCounter/MobileTabletCounter.csproj
+++ b/MobileTabletCounter/MobileTabletCounter/MobileTabletCounter.csproj
@@ -25,5 +25,8 @@
     <EmbeddedResource Update="Views\Medicine.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\Settings.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
